# Audio-Deepfake-Detection-System

./: README.md  app.py  dataset.csv  model.pkl  pyproject.toml  requirements.txt  scaler.pkl  trainer.py  vercel.json
static/styles/: styles.css
templates/: model.html
