[project]
name = "audio-deepfake-detection-system"
version = "0.1.0"
description = "Flask Deepfake Detection app deployed on Vercel"
requires-python = ">=3.9"
dependencies = [
  "flask==3.0.2",
  "gunicorn==23.0.0",
  "numpy==1.24.3",
  "librosa==0.10.1",
  "pandas==1.5.3",
  "resampy==0.4.2",
  "joblib==1.3.2",
  "matplotlib==3.7.3",
  "xgboost==1.7.6",
  "pydub==0.25.1",
  "scikit-learn==1.3.2"
]
